--- a/media/jscad-editor.css
+++ b/media/jscad-editor.css
@@ -33,17 +33,38 @@
 }
 
 #statusspan {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  width: 100%;
-  padding: 3px;
-  background: rgba(220, 220, 220, 0.75);
-  font-weight: normal;
+  display: none;
 }
 
 #statusbuttons {
   display: none;
+}
+
+#jscad-viewer-controls {
+  display: none;
+  position: absolute;
+  bottom: 10px;
+  left: 5px;
+  user-select: none;
+}
+
+.jscad-container:hover #jscad-viewer-controls {
+  display: block;
+}
+
+.jscad-viewer-button {
+  margin-left: 5px;
+  padding: 5px;
+  /*background: var(--vscode-editor-foreground);*/
+  background: var(--vscode-editor-background);
+  /* border: solid 1px rgba(80, 80, 80, 0.75); */
+  box-shadow: 0 3px 3px rgba(80, 80, 80, 0.5);
+  cursor: default;
+  opacity: 0.75;
+}
+.jscad-viewer-button:link,
+.jscad-viewer-button:active {
+  color: var(--vscode-editor-foreground) !important;
 }
 
 
@@ -76,6 +97,7 @@ canvas {
 }
 
 #parametersdiv {
+  display: none;
   margin: 5px; /* not inherited */
   border: thin solid rgb(200,200,200);
   border-radius: 1em;
