--- a/media/jscad-editor.css
+++ b/media/jscad-editor.css
@@ -42,10 +42,15 @@
 
 #jscad-viewer-controls {
   display: none;
-  position: absolute;
-  bottom: 10px;
-  left: 5px;
   user-select: none;
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  background: var(--vscode-activityBar-background);
+  box-shadow: 0 3px 3px rgba(80, 80, 80, 0.5);
+  padding: 10px;
+  opacity: 0.75;
+  cursor: default;
 }
 
 .jscad-container:hover #jscad-viewer-controls {
@@ -53,18 +58,15 @@
 }
 
 .jscad-viewer-button {
-  margin-left: 5px;
-  padding: 5px;
-  /*background: var(--vscode-editor-foreground);*/
-  background: var(--vscode-editor-background);
-  /* border: solid 1px rgba(80, 80, 80, 0.75); */
-  box-shadow: 0 3px 3px rgba(80, 80, 80, 0.5);
-  cursor: default;
-  opacity: 0.75;
+  margin-right: 5px;
+  font-size: 16px;
+  color: var(--vscode-activityBar-inactiveForeground);
 }
-.jscad-viewer-button:link,
-.jscad-viewer-button:active {
-  color: var(--vscode-editor-foreground) !important;
+a.jscad-viewer-button:hover,
+a.jscad-viewer-button:link,
+a.jscad-viewer-button:active {
+  cursor: pointer;
+  color: var(--vscode-activityBar-foreground);
 }
 
 
