--- a/media/jscad-editor.css
+++ b/media/jscad-editor.css
@@ -59,6 +59,8 @@
 
 .jscad-viewer-button {
   margin: 0;
+  width: 32px;
+  height: 32px;
   font-size: 16px;
   color: var(--vscode-activityBar-inactiveForeground);
 }
@@ -66,6 +68,9 @@
   cursor: pointer;
   stroke: var(--vscode-activityBar-foreground);
 }
+/* .jscad-viewer-button-scene {
+  background: url(../resources/Icon_View_3D.svg);
+} */
 
 
 #viewerContext {
