--- a/media/jscad-editor.css
+++ b/media/jscad-editor.css
@@ -47,13 +47,14 @@
   bottom: 5px;
   left: 5px;
   background: var(--vscode-activityBar-background);
+  background-blend-mode: saturation;
   box-shadow: 0 3px 3px rgba(80, 80, 80, 0.5);
   padding: 5px;
   cursor: default;
 }
 
 .jscad-container:hover #jscad-viewer-controls {
-  opacity: 0.75;
+  opacity: 1;
   transition: all 0.3s ease-in-out;
 }
 
@@ -63,27 +64,24 @@
   height: 32px;
   font-size: 16px;
   cursor: pointer;
-  /* color: var(--vscode-activityBar-inactiveForeground); */
+  -webkit-mask: no-repeat 50% 50%;
+  background-color: var(--vscode-activityBar-inactiveForeground);
 }
-/* .jscad-viewer-button:hover svg {
-  cursor: pointer;
-  stroke: var(--vscode-activityBar-foreground);
-} */
-.jscad-viewer-button svg {
-  width: 100% !important;
-  height: auto !important;
+.jscad-viewer-button:hover {
+  background-color: var(--vscode-activityBar-foreground);
 }
+
 .jscad-viewer-button-scene {
-  background: url(../resources/Icon_View_Empty.svg);
+  -webkit-mask-image: url(../resources/Icon_View_Empty.svg);
 }
 .jscad-viewer-button-top {
-  background: url(../resources/Icon_View_Top.svg);
+  -webkit-mask-image: url(../resources/Icon_View_Top.svg);
 }
 .jscad-viewer-button-front {
-  background: url(../resources/Icon_View_Front.svg);
+  -webkit-mask-image: url(../resources/Icon_View_Front.svg);
 }
 .jscad-viewer-button-right {
-  background: url(../resources/Icon_View_Right.svg);
+  -webkit-mask-image: url(../resources/Icon_View_Right.svg);
 }
 
 
